CHANGES
*******

1.8.16 (unreleased)
===================

- Update to 1.8.16

- Rewrite download script.  Now javascript as well as themeroller themes
  are downloaded from the on-line download builder.   Additionally,
  the download script builds the declarations for individual ui
  and effects components.


1.8.13-1 (2011-06-22)
=====================

- Added the i18n resources.


1.8.13 (2011-06-10)
===================

- Update to 1.8.13.


1.8.9 (2011-02-23)
==================

- Update to 1.8.9.

- Add download script that downloads the default set of themeroller themes.

- Fix manifest to include i18n files.


1.8.7 (2011-01-07)
==================

- Initial release.